cleaning introduction sections

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,55 @@
+@article{Alpern1999,
+abstract = {Two agents are placed randomly on nodes of a known graph. They are aware of their own position, up to certain symmetries of the graph, but not that of the other agent. At each step, each agent may stay where he is or move to an adjacent node. Their common aim is to minimize the expected number of steps required to meet (occupy the same node). We consider two cases determined by whether or not the players are constrained to use identical strategies. This work extends that of Anderson and Weber on ‘discrete locations' (complete graph) and is related to continuous (time and space) rendezvous as formulated by Alpern. Probabilistic notions arise in the random initial placement, in the random symmetries determining spatial uncertainty of agents, and through the use of mixed strategies.},
+author = {Alpern, Steve and Baston, V. J. and Essegaier, Skander},
+doi = {10.1239/jap/1032374243},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/Rendezvous Search on a Graph.pdf:pdf},
+issn = {0021-9002},
+journal = {Journal of Applied Probability},
+keywords = {Rendezvous search,Search game},
+month = {mar},
+number = {01},
+pages = {223--231},
+title = {{Rendezvous search on a graph}},
+url = {https://www.cambridge.org/core/product/identifier/S0021900200016983/type/journal{\_}article},
+volume = {36},
+year = {1999}
+}
+@article{Alpern1998,
+abstract = {E. J. Anderson and R. R. Weber, J. Appl. Probab., 28 (1990), pp. 839–851, considered the problem of two rendezvousers, R1,R2, randomly placed among n indistinguishable locations, who seek to meet in least expected time, using the same mixed strategy. We retain their dynamics but modify the rendezvousers' aim to meeting each other before either encounters an enemy searcher S. We solve this zero-sum game in minimal space (3 locations) and time (2 steps after placement), and find that optimal play requires that the rendezvous team use a mixture over behavioral strategies. While such complicated strategies are known to be necessary in principal for team games (the theory of Isbell and Alpern), we believe this is the first naturally occuring game where such a solution is derived. (An earlier paper by Lim solved a similar game in which R1 and R2 were allowed to use different strategies and joint randomization.)},
+author = {Alpern, Steve and Shi, Lim Wei},
+doi = {https https://doi.org/10.1137/S0363012996309770},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/The Symmetric Rendezvous-Evasion Game.pdf:pdf},
+journal = {SIAM Journal on Control and Optimization},
+keywords = {rendezvous search,zero-sum game},
+number = {3},
+pages = {948--959},
+title = {{The Symmetric Rendezvous-Evasion Game}},
+volume = {36},
+year = {1998}
+}
+@article{Abdel-Rahman2014,
+abstract = {Establishing communications in a dynamic spectrum access (DSA) network requires the communicating parties to “rendezvous” before transmitting their data packets. Frequency hopping (FH) is an effective rendezvous method that does not rely on a predetermined control channel. Recently, “quorum-based” FH approaches have been proposed for asynchronous rendezvous in DSA networks. These approaches are highly vulnerable to jamming, especially when the attacker is an insider node (i.e., a compromised node). In this paper, we investigate the problem of two secondary users (SUs), a transmitter and a receiver, try to rendezvous in the presence of a third SU acting as a jammer. The jammer is aware of the underlying (quorum-based) rendezvous design. First, we consider the case when all SUs are time-synchronized and are aware of the “rendezvous channel.” We formulate the problem as a three-player game between the transmitter, receiver, and jammer. The transmitter and receiver try to maximize the number of successful rendezvous slots, while minimizing the number of jammed rendezvous slots. The jammer has the opposite objective. We show that this game does not have a pure Nash equilibrium (NE). Accordingly, we formulate a simplified two-player game between the receiver and jammer (assuming a uniform strategy by the transmitter), and derive multiple pure NE strategies. Next, we study the case when the rendezvous channel is unknown and obtain the Bayesian NE. Finally, the asynchronous case is addressed by exploiting the “rotation closure property” of quorum systems. Our numerical experiments show that uncertainty about the transmitter's strategy improves the anti-jamming rendezvous performance. They also show that the rendezvous performance improves if the receiver and jammer are time-synchronized, and also improves if the receiver and jammer have a common guess about the transmitter's strategy.},
+author = {Abdel-Rahman, Mohammad J. and Krunz, Marwan},
+doi = {10.1109/DySPAN.2014.6817801},
+file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/Game-theoretic Quorum-based Frequency Hopping for anti-jamming in dsa networks.pdf:pdf},
+isbn = {9781479926619},
+journal = {2014 IEEE International Symposium on Dynamic Spectrum Access Networks, DYSPAN 2014},
+keywords = {Bayesian games,frequency hopping,quorum systems,rendezvous,three-player games},
+pages = {248--258},
+title = {{Game-theoretic quorum-based frequency hopping for anti-jamming rendezvous in DSA networks}},
+year = {2014}
+}
+@article{Leone2016,
+abstract = {We consider a new type of asymmetric rendezvous search problem in which Agent II needs to give Agent I a `gift' which can be in the form of information or material. The gift can either be transfered upon meeting, as in traditional rendezvous, or it can be dropped o? by II at a location he passes, in the hope it will be found by I. The gift might be a water bottle for a traveller lost in the desert; a supply cache for Lieutenant Scott in the Antarctic; or important information (left as a gift). The common aim of the two agents is to minimize the time taken for I to either meet II or find the gift. We find optimal agent paths and droppo? times when the search region is a line, the initial distance between the players is known and one or both of the players can leave gifts. When there are no gifts this is the classical asymmetric rendezvous problem solved by Alpern and Gal in 1995 [10]. We exhibit strategies solving these various problems and use a `rendezvous algorithm' to establish their optimality.},
+archivePrefix = {arXiv},
+arxivId = {1611.05205},
+author = {Leone, Pierre and Alpern, Steve},
+eprint = {1611.05205},
+file = {:maths/pg/pmxtol/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Leone, Alpern - 2016 - Search-and-Rescue Rendezvous.pdf:pdf},
+title = {{Search-and-Rescue Rendezvous}},
+url = {http://arxiv.org/abs/1611.05205},
+year = {2016}
+}
 @article{Zoroa2004,
 author = {Zoroa, P and Zoroa, N},
 file = {:local/pmxtol/Dropbox/PhD/Papers/Patrolling Games/New papers/Search and Ambush Games with Capacities.pdf:pdf},
